--- a/website.html
+++ b/website.html
@@ -16,7 +16,7 @@
     <title>Bootstrap Base Template</title>
   </head>
   <body>
-
+  
     <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
@@ -61,11 +61,6 @@
       </div>
     </nav>
     <!-- End of navigation bar -->
-
-  <!-- This div is  intentionally blank. It creates the transparent black overlay over the video which you can modify in the CSS -->
-  <div class="overlay"></div>
-
-  <!-- The HTML5 video element that will create the background video on the header -->
  
 
   <!-- The header content -->
@@ -79,13 +74,18 @@
 		  <link rel="stylesheet" href="style.css">
 		  </head>
 		  <body>
-  <div class="wrapper header-content">
-    <h2 class="header-content text-center display-1">VirtYou</h2>
-	<h2 class="under-title text-center display-6">Respect - Safety - Self-Determination - Responsiveness</h2>
-	<video src="videos/frontpagevideo.mp4" autoplay muted loop></video>
-			  
-			  </div></body></html>
+	
+	
+	
+	<!-- The HTML5 video element that will create the background video on the header -->
+	<div class="overlay"></div>
+	<video src="videos/frontpagevideo.mp4" autoplay muted loop></video> 
+	</body></html>
 
+	 <div class="wrapper header-content">
+    <h2 class="text-center display-1 main-header-content">VirtYou</h2>
+	<h2 class="under-title text-center display-6">Self-Determination &nbsp;| &nbsp;Safety &nbsp;&nbsp;| &nbsp;&nbsp;Responsiveness &nbsp;&nbsp;| &nbsp;&nbsp;Respect</h2></div>
+	  
     <!-- Start of carrousel, adapted from https://getbootstrap.com/docs/5.1/components/carousel/ -->
     <section class="container-fluid p-0">
       <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
